@@ -148,9 +148,8 @@ fbEvenStipple (FbBits	*dst,
     /*
      * Get pointer to stipple mask array for this depth
      */
-    fbBits = 0;	/* unused */
-    if (pixelsPerDst <= 8)
-	fbBits = fbStippleTable[pixelsPerDst];
+    /* fbStippleTable covers all valid bpp (4,8,16,32) */
+    fbBits = fbStippleTable[pixelsPerDst];
     
     while (height--)
     {
